@@ -4116,6 +4116,161 @@ begin_function
 specifier|static
 name|GValueArray
 modifier|*
+DECL|function|text_layer_resize_invoker (GimpProcedure * procedure,Gimp * gimp,GimpContext * context,GimpProgress * progress,const GValueArray * args,GError ** error)
+name|text_layer_resize_invoker
+parameter_list|(
+name|GimpProcedure
+modifier|*
+name|procedure
+parameter_list|,
+name|Gimp
+modifier|*
+name|gimp
+parameter_list|,
+name|GimpContext
+modifier|*
+name|context
+parameter_list|,
+name|GimpProgress
+modifier|*
+name|progress
+parameter_list|,
+specifier|const
+name|GValueArray
+modifier|*
+name|args
+parameter_list|,
+name|GError
+modifier|*
+modifier|*
+name|error
+parameter_list|)
+block|{
+name|gboolean
+name|success
+init|=
+name|TRUE
+decl_stmt|;
+name|GimpLayer
+modifier|*
+name|layer
+decl_stmt|;
+name|gdouble
+name|width
+decl_stmt|;
+name|gdouble
+name|height
+decl_stmt|;
+name|layer
+operator|=
+name|gimp_value_get_layer
+argument_list|(
+operator|&
+name|args
+operator|->
+name|values
+index|[
+literal|0
+index|]
+argument_list|,
+name|gimp
+argument_list|)
+expr_stmt|;
+name|width
+operator|=
+name|g_value_get_double
+argument_list|(
+operator|&
+name|args
+operator|->
+name|values
+index|[
+literal|1
+index|]
+argument_list|)
+expr_stmt|;
+name|height
+operator|=
+name|g_value_get_double
+argument_list|(
+operator|&
+name|args
+operator|->
+name|values
+index|[
+literal|2
+index|]
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|success
+condition|)
+block|{
+if|if
+condition|(
+name|gimp_pdb_layer_is_text_layer
+argument_list|(
+name|layer
+argument_list|,
+name|error
+argument_list|)
+condition|)
+block|{
+name|gimp_text_layer_set
+argument_list|(
+name|GIMP_TEXT_LAYER
+argument_list|(
+name|layer
+argument_list|)
+argument_list|,
+name|_
+argument_list|(
+literal|"Set text layer attribute"
+argument_list|)
+argument_list|,
+literal|"box-width"
+argument_list|,
+name|width
+argument_list|,
+literal|"box-height"
+argument_list|,
+name|height
+argument_list|,
+name|NULL
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|success
+operator|=
+name|FALSE
+expr_stmt|;
+block|}
+block|}
+return|return
+name|gimp_procedure_get_return_values
+argument_list|(
+name|procedure
+argument_list|,
+name|success
+argument_list|,
+name|error
+condition|?
+operator|*
+name|error
+else|:
+name|NULL
+argument_list|)
+return|;
+block|}
+end_function
+
+begin_function
+specifier|static
+name|GValueArray
+modifier|*
 DECL|function|text_layer_get_hinting_invoker (GimpProcedure * procedure,Gimp * gimp,GimpContext * context,GimpProgress * progress,const GValueArray * args,GError ** error)
 name|text_layer_get_hinting_invoker
 parameter_list|(
@@ -7065,6 +7220,121 @@ literal|8192.0
 argument_list|,
 operator|-
 literal|8192.0
+argument_list|,
+name|GIMP_PARAM_READWRITE
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|gimp_pdb_register_procedure
+argument_list|(
+name|pdb
+argument_list|,
+name|procedure
+argument_list|)
+expr_stmt|;
+name|g_object_unref
+argument_list|(
+name|procedure
+argument_list|)
+expr_stmt|;
+comment|/*    * gimp-text-layer-resize    */
+name|procedure
+operator|=
+name|gimp_procedure_new
+argument_list|(
+name|text_layer_resize_invoker
+argument_list|)
+expr_stmt|;
+name|gimp_object_set_static_name
+argument_list|(
+name|GIMP_OBJECT
+argument_list|(
+name|procedure
+argument_list|)
+argument_list|,
+literal|"gimp-text-layer-resize"
+argument_list|)
+expr_stmt|;
+name|gimp_procedure_set_static_strings
+argument_list|(
+name|procedure
+argument_list|,
+literal|"gimp-text-layer-resize"
+argument_list|,
+literal|"Resize the box of a text layer."
+argument_list|,
+literal|"This procedure changes the width and height of a text layer while keeping it as a text layer and not converting it to a bitmap like 'gimp-layer-resize' would do."
+argument_list|,
+literal|"Barak Itkin<lightningismyname@gmail.com>"
+argument_list|,
+literal|"Barak Itkin"
+argument_list|,
+literal|"2009"
+argument_list|,
+name|NULL
+argument_list|)
+expr_stmt|;
+name|gimp_procedure_add_argument
+argument_list|(
+name|procedure
+argument_list|,
+name|gimp_param_spec_layer_id
+argument_list|(
+literal|"layer"
+argument_list|,
+literal|"layer"
+argument_list|,
+literal|"The text layer"
+argument_list|,
+name|pdb
+operator|->
+name|gimp
+argument_list|,
+name|FALSE
+argument_list|,
+name|GIMP_PARAM_READWRITE
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|gimp_procedure_add_argument
+argument_list|(
+name|procedure
+argument_list|,
+name|g_param_spec_double
+argument_list|(
+literal|"width"
+argument_list|,
+literal|"width"
+argument_list|,
+literal|"The new box width in pixels"
+argument_list|,
+literal|0.0
+argument_list|,
+name|GIMP_MAX_IMAGE_SIZE
+argument_list|,
+literal|0.0
+argument_list|,
+name|GIMP_PARAM_READWRITE
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|gimp_procedure_add_argument
+argument_list|(
+name|procedure
+argument_list|,
+name|g_param_spec_double
+argument_list|(
+literal|"height"
+argument_list|,
+literal|"height"
+argument_list|,
+literal|"The new box height in pixels"
+argument_list|,
+literal|0.0
+argument_list|,
+name|GIMP_MAX_IMAGE_SIZE
+argument_list|,
+literal|0.0
 argument_list|,
 name|GIMP_PARAM_READWRITE
 argument_list|)
