@@ -2182,6 +2182,87 @@ block|}
 end_function
 
 begin_comment
+comment|/**  * gimp_text_layer_resize:  * @layer_ID: The text layer.  * @width: The new box width in pixels.  * @height: The new box height in pixels.  *  * Resize the box of a text layer.  *  * This procedure changes the width and height of a text layer while  * keeping it as a text layer and not converting it to a bitmap like  * gimp_layer_resize() would do.  *  * Returns: TRUE on success.  *  * Since: GIMP 2.8  */
+end_comment
+
+begin_function
+name|gboolean
+DECL|function|gimp_text_layer_resize (gint32 layer_ID,gdouble width,gdouble height)
+name|gimp_text_layer_resize
+parameter_list|(
+name|gint32
+name|layer_ID
+parameter_list|,
+name|gdouble
+name|width
+parameter_list|,
+name|gdouble
+name|height
+parameter_list|)
+block|{
+name|GimpParam
+modifier|*
+name|return_vals
+decl_stmt|;
+name|gint
+name|nreturn_vals
+decl_stmt|;
+name|gboolean
+name|success
+init|=
+name|TRUE
+decl_stmt|;
+name|return_vals
+operator|=
+name|gimp_run_procedure
+argument_list|(
+literal|"gimp-text-layer-resize"
+argument_list|,
+operator|&
+name|nreturn_vals
+argument_list|,
+name|GIMP_PDB_LAYER
+argument_list|,
+name|layer_ID
+argument_list|,
+name|GIMP_PDB_FLOAT
+argument_list|,
+name|width
+argument_list|,
+name|GIMP_PDB_FLOAT
+argument_list|,
+name|height
+argument_list|,
+name|GIMP_PDB_END
+argument_list|)
+expr_stmt|;
+name|success
+operator|=
+name|return_vals
+index|[
+literal|0
+index|]
+operator|.
+name|data
+operator|.
+name|d_status
+operator|==
+name|GIMP_PDB_SUCCESS
+expr_stmt|;
+name|gimp_destroy_params
+argument_list|(
+name|return_vals
+argument_list|,
+name|nreturn_vals
+argument_list|)
+expr_stmt|;
+return|return
+name|success
+return|;
+block|}
+end_function
+
+begin_comment
 comment|/**  * gimp_text_layer_get_hinting:  * @layer_ID: The text layer.  * @autohint: A flag which is true if the text layer is forced to use the autohinter from FreeType.  *  * This procedure is deprecated! Use gimp_text_layer_get_hint_style()  * instead.  *  * Returns: A flag which is true if hinting is used on the font.  */
 end_comment
 
